--- a/PMApp/src/app/shared/frequency-picker/frequency-picker.component.html
+++ b/PMApp/src/app/shared/frequency-picker/frequency-picker.component.html
@@ -2,11 +2,9 @@
   <p-dropdown
     inputId="frequencySelector"
     [options]="frequencies"
-    [(ngModel)]="selection"
-    (ngModelChange)="onChange()"
     optionLabel="viewValue"
     optionValue="value"
-    [disabled]="in_disabled"
+    [formControl]="in_formControl"
   ></p-dropdown>
   <label for="frequencySelector">Frecuencia</label>
 </span>
