--- a/PMApp/src/app/features/home/components/list-transaction/list-transaction.component.html
+++ b/PMApp/src/app/features/home/components/list-transaction/list-transaction.component.html
@@ -12,8 +12,8 @@
       class="col-5 col-offset-1 flex flex-row justify-content-between align-items-center"
     >
       <app-transaction-type-picker
-        [in_selection]="selectedType"
-        (out_selection)="setTransactionType($event)"
+        [in_formControl]="transactionFormControl"
+        (change)="setTransactionType()"
       ></app-transaction-type-picker>
     </div>
     <div class="col-12">
