single update transaction

--- a/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
+++ b/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
@@ -69,6 +69,7 @@
           [in_repeatsFormControl]="repeats"
           [in_repetitionFormControl]="repetitions"
           [in_frequencyFormControl]="frequency"
+          (click)="onRepeatsChange()"
         ></app-repetition-field>
         <p-divider></p-divider>
       </div>
