--- a/PMApp/src/app/shared/category-picker/category-picker.component.html
+++ b/PMApp/src/app/shared/category-picker/category-picker.component.html
@@ -3,8 +3,9 @@
     [options]="categories"
     optionLabel="name"
     optionValue="id"
-    [formControl]="in_formControl"
+    [(ngModel)]="selection"
     inputId="categorySelector"
+    (onChange)="updateFormControl()"
   ></p-dropdown>
   <label for="categorySelector">Categoría</label>
 </span>
