--- a/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
+++ b/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
@@ -11,7 +11,7 @@
           class="pi pi-check-circle"
           style="font-size: 3rem"
           [ngStyle]="{
-            color: transaction.completed == true ? 'green' : 'gray'
+            color: transaction.completed == true ? 'green' : 'lightgray'
           }"
         ></i>
       </div>
@@ -21,23 +21,37 @@
         <i
           class="pi pi-refresh"
           style="font-size: 3rem"
+          *ngIf="transaction.recurrent"
           [ngStyle]="{
-            color:
-              transaction.payment_item?.recurrent == true
-                ? 'lightgreen'
-                : 'gray'
+            color: 'lightgreen'
+          }"
+        ></i>
+        <i
+          class="pi pi-refresh"
+          style="font-size: 3rem"
+          *ngIf="!transaction.recurrent && !transaction.installment"
+          [ngStyle]="{
+            color: 'lightgray'
+          }"
+        ></i>
+        <i
+          class="pi pi-sort-numeric-down"
+          style="font-size: 3rem"
+          *ngIf="transaction.installment"
+          [ngStyle]="{
+            color: 'orange'
           }"
         ></i>
       </div>
       <div
         class="col-3 flex flex-wrap justify-content-center align-items-center"
       >
-        <i class="pi pi-image" style="color: blue; font-size: 3rem"></i>
+        <i class="pi pi-image" style="color: lightgray; font-size: 3rem"></i>
       </div>
       <div
         class="col-3 flex flex-wrap justify-content-center align-items-center"
       >
-        <i class="pi pi-heart" style="color: red; font-size: 3rem"></i>
+        <i class="pi pi-heart" style="color: lightgray; font-size: 3rem"></i>
       </div>
     </div>
     <p-divider></p-divider>
@@ -56,7 +70,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Descripción</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Descripción
+          </td>
           <td class="col-2"></td>
           <td
             class="col-2 justify-content-center align-items-right"
@@ -70,7 +88,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Valor</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Valor
+          </td>
         </tr>
         <tr>
           <td class="col-4 align-items-left mt-0 pt-0">
@@ -95,7 +117,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Fecha</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Fecha
+          </td>
           <td class="col-2"></td>
           <td
             class="col-2 justify-content-center align-items-right"
@@ -109,7 +135,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Cuenta</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Cuenta
+          </td>
         </tr>
         <tr>
           <td class="col-4 align-items-left mt-0 pt-0">
@@ -132,7 +162,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Categoría</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Categoría
+          </td>
           <td class="col-2"></td>
           <td
             class="col-2 justify-content-center align-items-right"
@@ -146,10 +180,16 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Etiquetas</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Etiquetas
+          </td>
         </tr>
         <tr>
-          <td class="col-4 align-items-left mt-0 pt-0">categoría</td>
+          <td class="col-4 align-items-left mt-0 pt-0">
+            {{ transaction?.payment_item?.category?.name }}
+          </td>
           <td class="col-2"></td>
           <td class="col-4 align-items-left mt-0 pt-0">Tags</td>
         </tr>
@@ -167,7 +207,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Recordatorio</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Recordatorio
+          </td>
           <td class="col-2"></td>
           <td
             class="col-2 justify-content-center align-items-right"
@@ -194,7 +238,11 @@
               style="font-size: 2rem"
             ></i>
           </td>
-          <td class="col-4 align-items-left mb-0 pb-0">Notas</td>
+          <td
+            class="col-4 align-items-left mb-0 pb-0 text-xs font-semibold text-600"
+          >
+            Notas
+          </td>
           <td class="col-2"></td>
           <td
             class="col-2 justify-content-center align-items-right"
