--- a/PMApp/src/app/shared/currency-field/currency-field.component.html
+++ b/PMApp/src/app/shared/currency-field/currency-field.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-  <div class="flex flex-wrap flex-row gap-4">
+  <div class="flex flex-wrap flex-row gap-4 pl-2">
     <div class="block">
       <span class="p-float-label">
         <p-dropdown
