--- a/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
+++ b/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
@@ -203,7 +203,7 @@
         </tr>
         <tr>
           <td class="col-4 align-items-left mt-0 pt-0">
-            {{ transaction?.payment_item?.category?.name }}
+            {{ transaction.payment_item?.category?.name }}
           </td>
           <td class="col-2"></td>
           <td class="col-4 align-items-left mt-0 pt-0">Tags</td>
