--- a/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
+++ b/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
@@ -131,7 +131,7 @@
         label="Limpiar"
         class="p-button-outlined"
         icon="pi pi-times"
-        (click)="form.reset()"
+        (click)="onClearForm()"
       ></button>
       <button
         pButton
