--- a/PMApp/src/app/shared/toolbar/toolbar.component.html
+++ b/PMApp/src/app/shared/toolbar/toolbar.component.html
@@ -9,18 +9,12 @@
   </a>
   <span>MyBugetApp</span>
   <span class="example-spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button
+  <a
+    href="categorias/"
     mat-icon-button
     class="example-icon"
-    aria-label="Example icon-button with share icon"
+    aria-label="Example icon-button with menu icon"
   >
-    <mat-icon>share</mat-icon>
-  </button>
+    <mat-icon>category</mat-icon>
+  </a>
 </mat-toolbar>
