--- a/PMApp/src/app/app.component.html
+++ b/PMApp/src/app/app.component.html
@@ -3,6 +3,8 @@
     <app-toolbar></app-toolbar>
   </div>
   <div class="col-12 md:col-6 md:col-offset-3">
+    <p-toast position="bottom-center"></p-toast>
+
     <router-outlet></router-outlet>
   </div>
 </div>
