--- a/PMApp/src/app/shared/toolbar/toolbar.component.html
+++ b/PMApp/src/app/shared/toolbar/toolbar.component.html
@@ -10,6 +10,30 @@
   <span>MyBugetApp</span>
   <span class="example-spacer"></span>
   <a
+    href="iniciar-sesion/"
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with menu icon"
+  >
+    <mat-icon>login</mat-icon>
+  </a>
+  <a
+    href="registrarse/"
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with menu icon"
+  >
+    <mat-icon>person</mat-icon>
+  </a>
+  <a
+    href="logout/"
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with menu icon"
+  >
+    <mat-icon>logout</mat-icon>
+  </a>
+  <a
     href="categorias/"
     mat-icon-button
     class="example-icon"
