category picker fixed

--- a/PMApp/src/app/features/category/components/move-category/move-category.component.html
+++ b/PMApp/src/app/features/category/components/move-category/move-category.component.html
@@ -11,6 +11,7 @@
       <app-category-picker
         [in_transactionType]="in_transactionType"
         [in_formControl]="formTo"
+        [in_dropValue]="selectionFrom"
       ></app-category-picker>
       <button
         pButton
