--- a/PMApp/src/app/shared/category-picker/category-picker.component.html
+++ b/PMApp/src/app/shared/category-picker/category-picker.component.html
@@ -3,9 +3,8 @@
     [options]="categories"
     optionLabel="name"
     optionValue="id"
-    [(ngModel)]="selection"
+    [formControl]="in_formControl"
     inputId="categorySelector"
-    (onChange)="updateFormControl()"
   ></p-dropdown>
   <label for="categorySelector">Categoría</label>
 </span>
