--- a/PMApp/src/app/app.component.html
+++ b/PMApp/src/app/app.component.html
@@ -8,3 +8,7 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+<p-confirmDialog
+  header="Confirmar"
+  icon="pi pi-exclamation-triangle"
+></p-confirmDialog>
