--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -76,7 +76,7 @@
 
       <div class="col-12 flex flex-row gap-4 pt-2 mb-0 pb-2 align-items-center">
         <app-category-picker
-          [in_transactionType]="$transactionType"
+          [in_transactionType]="transactionType"
           [in_formControl]="category"
         ></app-category-picker>
         <p-button
