--- a/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
+++ b/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
@@ -52,20 +52,9 @@
         <p-divider></p-divider>
       </div>
 
-      <div class="col-12 my-0 py-0">
-        <span>
-          <h5>{{ transactionTypeLabel }} Fijo</h5>
-          <p-inputSwitch
-            inputId="recurrentSwitch"
-            formControlName="recurrent"
-          ></p-inputSwitch>
-        </span>
-        <p-divider></p-divider>
-      </div>
-
       <div class="col-12 flex flex-row gap-4 pt-2 mb-0 pb-2 align-items-center">
         <app-category-picker
-          [in_transactionType]="$transactionType"
+          [in_transactionType]="transactionType"
           [in_formControl]="category"
         ></app-category-picker>
         <p-button
