--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -100,6 +100,16 @@
         </span>
         <p-divider></p-divider>
       </div>
+
+      <div class="col-12 flex flex-row gap-4 pt-2 mb-0 pb-2 align-items-center">
+        <app-tag-picker [in_formControl]="tags"></app-tag-picker>
+        <p-button
+          label="Administrar"
+          [routerLink]="'/categorias'"
+          styleClass="p-button-text p-button-primary p-button-sm"
+        ></p-button>
+      </div>
+      <p-divider></p-divider>
     </form>
   </div>
   <ng-template pTemplate="footer">
