tag functionality added

--- a/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
+++ b/PMApp/src/app/features/home/components/detail-transaction/detail-transaction.component.html
@@ -208,7 +208,7 @@
           <td class="col-2"></td>
           <td class="col-4 align-items-left mt-0 pt-0">
             <div *ngFor="let tag of transaction.payment_item?.tags">
-              <p-chip [label]="tag.name" [removable]="false"></p-chip>
+              <p-tag [value]="tag.name"></p-tag>
             </div>
           </td>
         </tr>
