--- a/PMApp/src/app/shared/tag-picker/tag-picker.component.html
+++ b/PMApp/src/app/shared/tag-picker/tag-picker.component.html
@@ -3,10 +3,13 @@
     inputId="tagSelector"
     [formControl]="in_formControl"
     [suggestions]="items"
+    field="name"
+    dataKey="id"
     (completeMethod)="search($event)"
     style="width: 75%"
     [multiple]="true"
-    [showEmptyMessage]="false"
+    [showEmptyMessage]="true"
+    [emptyMessage]="'No se encontraron resultados'"
     [forceSelection]="false"
     [unique]="true"
   ></p-autoComplete>
