--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -105,7 +105,7 @@
         <app-tag-picker [in_formControl]="tags"></app-tag-picker>
         <p-button
           label="Administrar"
-          [routerLink]="'/categorias'"
+          [routerLink]="'/etiquetas'"
           styleClass="p-button-text p-button-primary p-button-sm"
         ></p-button>
       </div>
