--- a/PMApp/src/app/app.component.html
+++ b/PMApp/src/app/app.component.html
@@ -1,10 +1,10 @@
+<app-sidebar></app-sidebar>
 <div class="grid">
   <div class="col-12">
     <app-toolbar></app-toolbar>
   </div>
   <div class="col-12 md:col-6 md:col-offset-3">
     <p-toast position="bottom-center"></p-toast>
-
     <router-outlet></router-outlet>
   </div>
 </div>
