--- a/PMApp/src/app/features/home/components/download-transaction/download-transaction.component.html
+++ b/PMApp/src/app/features/home/components/download-transaction/download-transaction.component.html
@@ -1,4 +1,4 @@
-<div class="container flex flex-wrap flex-column justify-content-center">
+<div class="flex align-items-center justify-content-center m-">
   <form [formGroup]="form" id="ngForm">
     <div
       class="flex flex-wrap flex-column gap-6 justify-content-center align-items-center"
