--- a/PMApp/src/app/features/home/components/upload-transaction/upload-transaction.component.html
+++ b/PMApp/src/app/features/home/components/upload-transaction/upload-transaction.component.html
@@ -1,26 +1,29 @@
-<div class="flex m-5">
+<div class="flex align-items-center justify-content-center m-5">
   <div class="flex flex-wrap flex-column gap-3">
-    <a
-      pButton
-      pRipple
-      type="button"
-      label="Descargar plantilla"
-      class="p-button-raised p-button-text"
-      href="assets/Plantilla de carga de transacciones.csv"
-    ></a>
+    <div class="col-12">
+      <h3>Plantilla de ejemplo:</h3>
+      <a
+        type="button"
+        label="Descargar"
+        class="p-button-raised p-button-text"
+        href="assets/Plantilla de carga de transacciones.csv"
+        >Descargar</a
+      >
+    </div>
+    <div class="col-6 col-offset-3 flex gap-3">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <p-fileUpload
+          name="myfile[]"
+          [auto]="true"
+          accept=".csv"
+          [customUpload]="true"
+          (uploadHandler)="onChange($event)"
+        ></p-fileUpload>
 
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <p-fileUpload
-        name="myfile[]"
-        [auto]="true"
-        accept=".csv"
-        [customUpload]="true"
-        (uploadHandler)="onChange($event)"
-      ></p-fileUpload>
-
-      <button pButton class="p-button-raised p-button-text" type="submit">
-        Importar datos
-      </button>
-    </form>
+        <button pButton class="p-button-raised p-button-text" type="submit">
+          Importar datos
+        </button>
+      </form>
+    </div>
   </div>
 </div>
